--- a/SMU_PATH/app/src/main/AndroidManifest.xml
+++ b/SMU_PATH/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.cookandroid.smu_path">
 
     <application
@@ -24,6 +25,7 @@
             android:exported="true">
 
         </activity>
+        <activity android:name=".Search_activity"/>
     </application>
 
 </manifest>
